--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="clr"></div>
       <div class="menu_nav">
         <ul>
-          <li class="active"><a href="index.html"><span>Home Page</span></a></li>
+          <li class="active"><a href="index.html"><span>Home Page Moya</span></a></li>
           <li><a href="support.html"><span>Support</span></a></li>
           <li><a href="about.html"><span>About Us</span></a></li>
           <li><a href="blog.html"><span>Blog</span></a></li>
