--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </form>
       </div>
       <div class="logo">
-        <h1><a href="index.html">Shuffle<span>Bug</span> <small>Company Slogan Here</small></a></h1>
+        <h1><a href="index.html">Shuffle<span>Bug</span> <small>Machine Learning</small></a></h1>
       </div>
       <div class="clr"></div>
       <div class="menu_nav">
